@@ -1,5 +1,14 @@
 2007-12-15  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/checkbranches.py, jhbuild/modtypes/tarball.py,
+	jhbuild/versioncontrol/darcs.py, jhbuild/versioncontrol/git.py,
+	jhbuild/versioncontrol/hg.py, jhbuild/versioncontrol/svn.py,
+	jhbuild/versioncontrol/tarball.py: fix minor errors, unused code and
+	variables, patch by Craig Keogh, completed and edited by myself.
+	(closes: #502282)
+
+2007-12-15  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/modtypes/tarball.py: only unpack tarball if necessary, patch
 	by Craig Keogh.
 
